Fix border not showing around tags

--- a/styles/utils.css
+++ b/styles/utils.css
@@ -1,14 +1,3 @@
-.border-gradient {
-  border: 10px solid;
-  border-image-slice: 1;
-  border-width: 1px;
-  color: black;
-}
-
-.border-gradient-purple {
-  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
-}
-
 .rich-text-content,
 .markdown-content {
   h1,
